<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#141A33"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/titleText"
            style="@style/main_text_style"
            android:layout_marginStart="16dp"
            android:text="@string/title_text"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewQuestionOutOf"
            style="@style/main_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/out_of_text"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleText" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="165dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#18213A"
            android:elevation="25dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewQuestionOutOf">

            <TextView
                android:id="@+id/questionTextView"
                style="@style/main_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:padding="@dimen/question_text_padding"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/trueButton"
            style="@style/button_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/true_button"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <Button
            android:id="@+id/falseButton"
            style="@style/button_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/false_button"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trueButton" />

        <Button
            android:id="@+id/nextButton"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/next_button"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewAnswer"
            app:layout_constraintTop_toBottomOf="@+id/falseButton" />

        <TextView
            android:id="@+id/textViewAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/button_background_color"
            android:elevation="5dp"
            android:fontFamily="@font/roboto_mono"
            android:paddingStart="@dimen/answer_box_padding_start_end"
            android:paddingTop="@dimen/answer_box_padding_top_bottom"
            android:paddingEnd="@dimen/answer_box_padding_start_end"
            android:paddingBottom="@dimen/answer_box_padding_top_bottom"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/nextButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/falseButton" />

        <TextView
            android:id="@+id/textViewScore"
            style="@style/main_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_text"
            android:textAlignment="textEnd"
            android:textColor="@color/score_text_color"
            android:textSize="15sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewQuestionOutOf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.783"
            app:layout_constraintStart_toEndOf="@+id/textViewQuestionOutOf" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>